--- a/package.json
+++ b/package.json
@@ -31,65 +31,66 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.5.1",
+    "@builder.io/partytown": "^0.5.2",
     "@cypress/webpack-preprocessor": "^5.11.1",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
-    "@mdx-js/mdx": "^2.1.0",
-    "@sentry/node": "^6.19.3",
-    "@sentry/react": "^6.19.3",
-    "@sentry/tracing": "^6.19.3",
-    "@stripe/stripe-js": "^1.26.0",
+    "@mdx-js/mdx": "^2.1.1",
+    "@sentry/node": "^6.19.6",
+    "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
+    "@stripe/stripe-js": "^1.29.0",
+    "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.1",
     "date-fns": "2.28.0",
     "feed": "^4.2.2",
-    "firebase": "^9.6.10",
-    "firebase-admin": "^10.0.2",
+    "firebase": "^9.6.11",
+    "firebase-admin": "^10.1.0",
     "heroicons": "^1.0.6",
-    "next": "^12.1.4",
-    "next-i18next": "^10.5.0",
+    "next": "^12.1.5",
+    "next-i18next": "^11.0.0",
     "nodemailer": "^6.7.3",
     "nookies": "^2.5.2",
-    "pino": "^7.9.2",
-    "pino-pretty": "^7.6.0",
+    "pino": "^7.10.0",
+    "pino-pretty": "^7.6.1",
     "raw-body": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-epic-spinners": "^0.5.0",
-    "react-hook-form": "^7.29.0",
+    "react-hook-form": "^7.30.0",
     "react-hot-toast": "^2.2.0",
     "reactfire": "^4.2.1",
-    "sharp": "^0.30.3",
-    "stripe": "^8.214.0",
+    "sharp": "^0.30.4",
+    "stripe": "^8.219.0",
     "stripe-cli": "^0.1.0",
-    "zod": "^3.14.3"
+    "zod": "^3.14.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.1.4",
+    "@next/bundle-analyzer": "^12.1.5",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
+    "@types/node": "^17.0.26",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "@types/sharp": "^0.30.0",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "autoprefixer": "^10.4.4",
+    "@types/sharp": "^0.30.2",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "autoprefixer": "^10.4.5",
     "copy-webpack-plugin": "^10.2.4",
-    "cypress": "^9.5.3",
+    "cypress": "^9.5.4",
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.1.4",
+    "eslint-config-next": "12.1.5",
     "gray-matter": "4.0.3",
     "mjml": "^4.12.0",
-    "next-sitemap": "^2.5.17",
+    "next-sitemap": "^2.5.20",
     "postcss": "^8.4.12",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.0.1",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   }
 }
