--- a/.env.development.template
+++ b/.env.development.template
@@ -1,5 +1,8 @@
 NEXT_PUBLIC_EMULATOR=true
 
+GCLOUD_PROJECT=demo-makerkit
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=demo-makerkit
+
 FIRESTORE_EMULATOR_HOST=localhost:8080
 FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
 FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
