--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "format": "prettier --write src/**/*.{ts,tsx}",
     "export": "next export",
     "healthcheck": "npm run lint && npm run typecheck",
-    "firebase:emulators:start": "firebase emulators:start --import ./firebase-seed",
-    "firebase:emulators:export": "firebase emulators:export ./firebase-seed",
+    "firebase:emulators:start": "firebase emulators:start --project demo-makerkit --import ./firebase-seed",
+    "firebase:emulators:export": "firebase emulators:export --project demo-makerkit ./firebase-seed",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
-    "test": "firebase emulators:exec --import ./firebase-seed \"npm run cypress:headless\"",
+    "test": "firebase emulators:exec --project demo-makerkit --import ./firebase-seed \"npm run cypress:headless\"",
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "dependencies": {
@@ -42,7 +42,7 @@
     "classnames": "2.3.1",
     "date-fns": "2.28.0",
     "feed": "^4.2.2",
-    "firebase": "^9.8.4",
+    "firebase": "^9.9.0",
     "firebase-admin": "^11.0.0",
     "heroicons": "^1.0.6",
     "next": "^12.2.0",
