Added Stripe tests (#3)
* Added Stripe tests

* Added async payment test(to be finished)

* Added some missing configuration details

* Added test env, improved flaky tests

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,3 @@
-NEXT_PUBLIC_EMULATOR=true
-
 GCLOUD_PROJECT=demo-makerkit
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=demo-makerkit
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=demo-makerkit.appspot.com
@@ -15,6 +13,6 @@ NEXT_PUBLIC_FIRESTORE_EMULATOR_PORT=8080
 NEXT_PUBLIC_FIREBASE_AUTH_EMULATOR_PORT=9099
 NEXT_PUBLIC_FIREBASE_STORAGE_EMULATOR_PORT=9199
 
-FIREBASE_CLIENT_EMAIL=
-FIREBASE_PRIVATE_KEY=
-SECRET_KEY=
+NEXT_PUBLIC_EMULATOR=true
+IS_CI=true
+ENABLE_STRIPE_TESTING=true
