--- a/.env.test.template
+++ b/.env.test.template
@@ -15,6 +15,4 @@ NEXT_PUBLIC_FIRESTORE_EMULATOR_PORT=8080
 NEXT_PUBLIC_FIREBASE_AUTH_EMULATOR_PORT=9099
 NEXT_PUBLIC_FIREBASE_STORAGE_EMULATOR_PORT=9199
 
-FIREBASE_CLIENT_EMAIL=
-FIREBASE_PRIVATE_KEY=
-SECRET_KEY=
+IS_CY=true
