Fix RSS generation

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,9 @@ node_modules/
 .idea/
 public/sitemap*.xml
 public/robots.txt
-rss.xml
+public/atom.xml
+public/rss.xml
+public/rss.json
 vcs.xml
 .firebaserc
 tsconfig.tsbuildinfo
