--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dev": "next dev",
     "build": "next build",
     "dev:test": "NODE_ENV=test next dev",
-    "postbuild": "npm run sitemap && npm run rss",
-    "rss": "npx ts-node -O '{\"module\": \"commonjs\"}' -P ./tsconfig.json './src/core/blog/rss-feed.ts'",
+    "postbuild": "npm run sitemap && npm run rss && npm run blog-docs-indexer",
+    "rss": "npx tsx './src/core/blog/rss-feed.ts'",
     "sitemap": "next-sitemap",
     "start": "next start",
     "typecheck": "tsc",
@@ -30,7 +30,8 @@
     "cypress:headless": "NODE_ENV=test cypress run",
     "test": "firebase emulators:exec --project demo-makerkit --import ./firebase-seed \"npm run cypress:headless\"",
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
-    "stripe:mock-server": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest"
+    "stripe:mock-server": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest",
+    "blog-docs-indexer": "npx tsx ./search-indexer"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.5",
@@ -47,6 +48,7 @@
     "firebase": "^9.9.0",
     "firebase-admin": "^11.0.0",
     "heroicons": "^1.0.6",
+    "minisearch": "^5.0.0",
     "next": "^12.2.0",
     "next-i18next": "^11.0.0",
     "nodemailer": "^6.7.7",
@@ -86,11 +88,11 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
-    "stripe-cli": "^0.1.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.0.1",
+    "stripe-cli": "^0.1.0",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.6.4"
   }
