--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "firebase:emulators:export": "firebase emulators:export --project demo-makerkit ./firebase-seed",
     "cypress": "NODE_ENV=test cypress open",
     "cypress:headless": "NODE_ENV=test cypress run",
-    "test": "firebase emulators:exec --project demo-makerkit --import ./firebase-seed \"npm run cypress:headless\"",
+    "test": "firebase emulators:exec --project demo-makerkit --import ./firebase-seed \"sh ./scripts/test.sh\"",
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
     "stripe:mock-server": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest",
     "blog-docs-indexer": "npx tsx ./search-indexer"
@@ -37,55 +37,56 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@mdx-js/mdx": "^2.1.2",
-    "@sentry/node": "^7.8.0",
-    "@sentry/react": "^7.8.0",
-    "@sentry/tracing": "^7.8.0",
-    "@stripe/stripe-js": "^1.34.0",
+    "@sentry/node": "^7.9.0",
+    "@sentry/react": "^7.9.0",
+    "@sentry/tracing": "^7.9.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.1",
     "date-fns": "2.29.1",
     "feed": "^4.2.2",
-    "firebase": "^9.9.1",
-    "firebase-admin": "^11.0.0",
+    "firebase": "^9.9.2",
+    "firebase-admin": "^11.0.1",
     "heroicons": "^1.0.6",
     "minisearch": "^5.0.0",
-    "next": "^12.2.3",
-    "next-i18next": "^11.0.0",
+    "mjml-react": "^2.0.8",
+    "next": "^12.2.4",
+    "next-i18next": "^11.3.0",
     "nodemailer": "^6.7.7",
     "nookies": "^2.5.2",
-    "pino": "^8.3.1",
+    "pino": "^8.4.0",
     "pino-pretty": "^8.1.0",
     "raw-body": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-epic-spinners": "^0.5.0",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "^7.34.0",
     "react-hot-toast": "^2.3.0",
     "reactfire": "^4.2.1",
     "sharp": "^0.30.7",
-    "stripe": "^9.16.0",
-    "zod": "^3.17.10"
+    "stripe": "^10.1.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.12.0",
-    "@next/bundle-analyzer": "^12.2.3",
+    "@next/bundle-analyzer": "^12.2.4",
     "@types/jest": "^27.5.1",
+    "@types/mjml-react": "^2.0.5",
     "@types/node": "^17.0.38",
-    "@types/nodemailer": "^6.4.4",
-    "@types/react": "^18.0.15",
+    "@types/nodemailer": "^6.4.5",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@types/sharp": "^0.30.4",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "autoprefixer": "^10.4.7",
-    "cypress": "^10.3.1",
+    "@types/sharp": "^0.30.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.8",
+    "cypress": "^10.4.0",
     "dotenv": "^16.0.1",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "12.2.3",
+    "eslint": "^8.21.0",
+    "eslint-config-next": "12.2.4",
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
-    "next-sitemap": "^3.1.15",
-    "postcss": "^8.4.14",
+    "next-sitemap": "^3.1.17",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "rehype-autolink-headings": "^6.1.1",
@@ -93,7 +94,7 @@
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.0.1",
     "stripe-cli": "^0.1.0",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   }
 }
