--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,7 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 GCLOUD_PROJECT=
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=
+NEXT_PUBLIC_APPCHECK_KEY=
 
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_WEBHOOK_SECRET=
