--- a/.env.production.template
+++ b/.env.production.template
@@ -1,4 +1,7 @@
+# DO NOT CHECK THIS IN, ADD THESE VARIABLES FROM THE VERCEL CI
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=
-SECRET_KEY=
 SECRET_APPCHECK_KEY=
+
+## ANY OTHER SECRET YOU MAY WANT TO STORE
+SECRET_KEY=
