--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "test": "firebase emulators:exec --project demo-makerkit --import ./firebase-seed \"sh ./scripts/test.sh\"",
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
     "stripe:mock-server": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest",
-    "blog-docs-indexer": "npx tsx ./search-indexer"
+    "blog-docs-indexer": "npx tsx ./search-indexer",
+    "killports": "sh scripts/kill-ports.sh"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -42,18 +43,18 @@
     "@sentry/tracing": "^7.11.1",
     "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.1",
-    "date-fns": "2.29.1",
+    "date-fns": "2.29.2",
     "feed": "^4.2.2",
-    "firebase": "^9.9.2",
+    "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
     "heroicons": "^1.0.6",
     "minisearch": "^5.0.0",
     "mjml-react": "^2.0.8",
     "next": "^12.2.5",
-    "next-i18next": "^11.3.0",
+    "next-i18next": "^12.0.0",
     "nodemailer": "^6.7.8",
     "nookies": "^2.5.2",
-    "pino": "^8.4.1",
+    "pino": "^8.4.2",
     "pino-pretty": "^9.0.1",
     "raw-body": "^2.5.1",
     "react": "^18.2.0",
@@ -63,7 +64,7 @@
     "react-hot-toast": "^2.3.0",
     "reactfire": "^4.2.2",
     "sharp": "^0.30.7",
-    "stripe": "^10.2.0",
+    "stripe": "^10.3.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -71,7 +72,7 @@
     "@next/bundle-analyzer": "^12.2.5",
     "@types/jest": "^28.1.7",
     "@types/mjml-react": "^2.0.5",
-    "@types/node": "^18.7.6",
+    "@types/node": "^18.7.8",
     "@types/nodemailer": "^6.4.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -85,7 +86,7 @@
     "eslint-config-next": "12.2.5",
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
-    "next-sitemap": "^3.1.20",
+    "next-sitemap": "^3.1.21",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
