--- a/.env.production.template
+++ b/.env.production.template
@@ -1,7 +1,18 @@
-# DO NOT CHECK THIS IN, ADD THESE VARIABLES FROM THE VERCEL CI
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+NEXT_PUBLIC_SITE_URL=
+
 FIREBASE_CLIENT_EMAIL=
+
+## SECRET KEYS ARE BEST ADDED TO YOUR CI
 FIREBASE_PRIVATE_KEY=
+SECRET_KEY=
 SECRET_APPCHECK_KEY=
 
-## ANY OTHER SECRET YOU MAY WANT TO STORE
-SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
