--- a/.env.development
+++ b/.env.development
@@ -1,32 +1,26 @@
 NEXT_PUBLIC_EMULATOR=true
 
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=localhost
+GCLOUD_PROJECT=demo-makerkit
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=demo-makerkit
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=demo-makerkit.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=localhost
+NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=localhost
+NEXT_PUBLIC_FIRESTORE_EMULATOR_PORT=8080
+NEXT_PUBLIC_FIREBASE_AUTH_EMULATOR_PORT=9099
+NEXT_PUBLIC_FIREBASE_STORAGE_EMULATOR_PORT=9199
 
 # Change this with your project's APP ID
 NEXT_PUBLIC_FIREBASE_APP_ID=1:981813564016:web:f13148231721fcd0ee5ab5
 # Change this with your project's API KEY
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAAqU_euGAMtJoXp0sECblAIndifCp0pmE
 
-NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=localhost
-NEXT_PUBLIC_FIRESTORE_EMULATOR_PORT=8080
-NEXT_PUBLIC_FIREBASE_AUTH_EMULATOR_PORT=9099
-NEXT_PUBLIC_FIREBASE_STORAGE_EMULATOR_PORT=9199
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
-GCLOUD_PROJECT=demo-makerkit
-FIREBASE_CLIENT_EMAIL=
 FIRESTORE_EMULATOR_HOST=localhost:8080
 FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
 FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
 FIREBASE_PUBSUB_EMULATOR_HOST=localhost:8085
 
-
-NEXT_PUBLIC_APPCHECK_DEBUG_TOKEN=
-
-# Fill these variables to use an email testing account https://ethereal.email/
-ETHEREAL_EMAIL=
-ETHEREAL_PASSWORD=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=
+SECRET_KEY=
