--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^1.0.6",
+    "@heroicons/react": "^2.0.4",
     "@mdx-js/mdx": "^2.1.3",
     "@sentry/node": "^7.11.1",
     "@sentry/react": "^7.11.1",
@@ -47,7 +47,7 @@
     "feed": "^4.2.2",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
-    "heroicons": "^1.0.6",
+    "heroicons": "2.0.4",
     "minisearch": "^5.0.0",
     "mjml-react": "^2.0.8",
     "next": "^12.2.5",
@@ -55,7 +55,7 @@
     "nodemailer": "^6.7.8",
     "nookies": "^2.5.2",
     "pino": "^8.4.2",
-    "pino-pretty": "^9.0.1",
+    "pino-pretty": "^9.1.0",
     "raw-body": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -64,21 +64,21 @@
     "react-hot-toast": "^2.3.0",
     "reactfire": "^4.2.2",
     "sharp": "^0.30.7",
-    "stripe": "^10.3.0",
+    "stripe": "^10.4.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.12.2",
     "@next/bundle-analyzer": "^12.2.5",
-    "@types/jest": "^28.1.7",
+    "@types/jest": "^28.1.8",
     "@types/mjml-react": "^2.0.5",
-    "@types/node": "^18.7.8",
+    "@types/node": "^18.7.13",
     "@types/nodemailer": "^6.4.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/sharp": "^0.30.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "autoprefixer": "^10.4.8",
     "cypress": "^10.6.0",
     "dotenv": "^16.0.1",
