--- a/.env.development
+++ b/.env.development
@@ -21,6 +21,9 @@ FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
 FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
 FIREBASE_PUBSUB_EMULATOR_HOST=localhost:8085
 
+ETHEREAL_EMAIL=
+ETHEREAL_PASSWORD=
+
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=
 SECRET_KEY=
