--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "root": true,
   "extends": [
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended"
+    "next/core-web-vitals"
   ],
   "plugins": [
     "@typescript-eslint"
