--- a/.env.production.template
+++ b/.env.production.template
@@ -4,14 +4,15 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_SITE_URL=
+NEXT_PUBLIC_APPCHECK_KEY=
 
 FIREBASE_CLIENT_EMAIL=
+GCLOUD_PROJECT=
 
 ## SECRET KEYS ARE BEST ADDED TO YOUR CI
 FIREBASE_PRIVATE_KEY=
-SECRET_KEY=
-SECRET_APPCHECK_KEY=
 
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
