--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -14,11 +14,13 @@
     "analyze": "ANALYZE=true npm run build",
     "dev": "next dev",
     "build": "next build",
+    "build:test": "NODE_ENV=test next build",
     "dev:test": "NODE_ENV=test next dev",
     "postbuild": "npm run sitemap && npm run rss && npm run blog-docs-indexer",
     "rss": "npx tsx './src/core/blog/rss-feed.ts'",
     "sitemap": "next-sitemap",
     "start": "next start",
+    "start:test": "NODE_ENV=test next start",
     "typecheck": "tsc",
     "lint": "next lint",
     "format": "prettier --write src/**/*.{ts,tsx}",
@@ -35,18 +37,18 @@
     "killports": "sh scripts/kill-ports.sh"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.1",
+    "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@mdx-js/mdx": "^2.1.3",
-    "@sentry/node": "^7.12.1",
-    "@sentry/react": "^7.12.1",
-    "@sentry/tracing": "^7.12.1",
+    "@sentry/node": "^7.13.0",
+    "@sentry/react": "^7.13.0",
+    "@sentry/tracing": "^7.13.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
     "date-fns": "2.29.3",
     "feed": "^4.2.2",
-    "firebase": "^9.9.4",
+    "firebase": "^9.10.0",
     "firebase-admin": "^11.0.1",
     "heroicons": "2.0.11",
     "minisearch": "^5.0.0",
@@ -56,7 +58,6 @@
     "nodemailer": "^6.7.8",
     "nookies": "^2.5.2",
     "pino": "^8.5.0",
-    "pino-pretty": "^9.1.0",
     "raw-body": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -64,20 +65,18 @@
     "react-hook-form": "^7.35.0",
     "react-hot-toast": "^2.4.0",
     "reactfire": "^4.2.2",
-    "sharp": "^0.31.0",
-    "stripe": "^10.8.0",
+    "stripe": "^10.10.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.12.2",
     "@next/bundle-analyzer": "^12.3.0",
-    "@types/jest": "^29.0.2",
+    "@types/jest": "^29.0.3",
     "@types/mjml-react": "^2.0.6",
     "@types/node": "^18.7.18",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "@types/sharp": "^0.30.5",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "autoprefixer": "^10.4.11",
@@ -88,6 +87,7 @@
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
     "next-sitemap": "^3.1.22",
+    "pino-pretty": "^9.1.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
