--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.4.4",
+  "version": "0.4.6",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -65,7 +65,7 @@
     "react-hook-form": "^7.36.1",
     "react-hot-toast": "^2.4.0",
     "reactfire": "^4.2.2",
-    "stripe": "^10.11.0",
+    "stripe": "^10.12.0-beta.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
@@ -73,12 +73,12 @@
     "@next/bundle-analyzer": "^12.3.1",
     "@types/jest": "^29.0.3",
     "@types/mjml-react": "^2.0.6",
-    "@types/node": "^18.7.20",
+    "@types/node": "^18.7.23",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
     "dotenv": "^16.0.2",
@@ -86,7 +86,7 @@
     "eslint-config-next": "12.3.1",
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
-    "next-sitemap": "^3.1.22",
+    "next-sitemap": "^3.1.23",
     "pino-pretty": "^9.1.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
