--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "killports": "sh scripts/kill-ports.sh"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.2",
+    "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.11",
     "@mdx-js/mdx": "^2.1.3",
     "@sentry/node": "^7.14.0",
@@ -54,7 +54,7 @@
     "minisearch": "^5.0.0",
     "mjml-react": "^2.0.8",
     "next": "^12.3.1",
-    "next-i18next": "^12.0.1",
+    "next-i18next": "^12.1.0",
     "nodemailer": "^6.8.0",
     "nookies": "^2.5.2",
     "pino": "^8.6.1",
@@ -65,13 +65,13 @@
     "react-hook-form": "^7.36.1",
     "react-hot-toast": "^2.4.0",
     "reactfire": "^4.2.2",
-    "stripe": "^10.12.0-beta.1",
+    "stripe": "^10.12.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.12.2",
+    "@cypress/webpack-preprocessor": "^5.13.0",
     "@next/bundle-analyzer": "^12.3.1",
-    "@types/jest": "^29.1.0",
+    "@types/jest": "^29.1.1",
     "@types/mjml-react": "^2.0.6",
     "@types/node": "^18.7.23",
     "@types/nodemailer": "^6.4.6",
@@ -81,14 +81,14 @@
     "@typescript-eslint/parser": "^5.38.1",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.9.0",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
     "next-sitemap": "^3.1.23",
     "pino-pretty": "^9.1.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "rehype-autolink-headings": "^6.1.1",
@@ -98,5 +98,8 @@
     "stripe-cli": "^0.1.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4"
+  },
+  "optionalDependencies": {
+    "recharts": "^2.1.14"
   }
 }
