1. Updated to Next.js 13 (#61)
2. Revamped Blog and Docs based on makerkit.dev
3. Fixed some linting issues using stricter settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,12 @@
       "~/configuration": [
         "./src/configuration.ts"
       ]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "exclude": [
     "node_modules"
@@ -41,7 +46,8 @@
     "@types/global.d.ts",
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "ts-node": {
     "files": true
