1. Added new package for route loading indicator (#62)
2. Added route loading indicator by default
3. Updated some design issues
4. Updated packages
5. Started onboarding revamp

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -40,17 +40,18 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@mdx-js/mdx": "^2.1.5",
-    "@sentry/node": "^7.16.0",
-    "@sentry/react": "^7.16.0",
-    "@sentry/tracing": "^7.16.0",
+    "@sentry/node": "^7.17.2",
+    "@sentry/react": "^7.17.2",
+    "@sentry/tracing": "^7.17.2",
     "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
     "date-fns": "2.29.3",
     "feed": "^4.2.2",
-    "firebase": "^9.12.1",
+    "firebase": "^9.13.0",
     "firebase-admin": "^11.2.0",
     "heroicons": "2.0.12",
+    "i": "^0.3.7",
     "minisearch": "^5.0.0",
     "mjml-react": "^2.0.8",
     "next": "^13.0.0",
@@ -64,6 +65,7 @@
     "react-epic-spinners": "^0.5.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
+    "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
     "stripe": "^10.15.0",
     "zod": "^3.19.1"
@@ -73,13 +75,13 @@
     "@next/bundle-analyzer": "^13.0.0",
     "@types/jest": "^29.2.0",
     "@types/mjml-react": "^2.0.6",
-    "@types/node": "^18.11.5",
+    "@types/node": "^18.11.7",
     "@types/nodemailer": "^6.4.6",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.13",
     "cypress": "^10.11.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.26.0",
