--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.6.7",
+  "version": "0.6.8",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -31,7 +31,7 @@
     "cypress": "NODE_ENV=test cypress open",
     "cypress:headless": "NODE_ENV=test cypress run",
     "test": "firebase emulators:exec --project demo-makerkit --import ./firebase-seed \"sh ./scripts/test.sh\"",
-    "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
+    "stripe:listen": "docker run --rm -it --name=stripe -v ~/.config/stripe:/root/.config/stripe stripe/stripe-cli:latest listen --forward-to localhost:3000/api/stripe/webhook",
     "stripe:mock-server": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest",
     "blog-docs-indexer": "npx tsx ./search-indexer",
     "killports": "sh scripts/kill-ports.sh"
@@ -40,20 +40,20 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@mdx-js/mdx": "^2.1.5",
-    "@sentry/node": "^7.19.0",
-    "@sentry/react": "^7.19.0",
-    "@sentry/tracing": "^7.19.0",
+    "@sentry/node": "^7.20.0",
+    "@sentry/react": "^7.20.0",
+    "@sentry/tracing": "^7.20.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
     "date-fns": "2.29.3",
     "feed": "^4.2.2",
     "firebase": "^9.14.0",
-    "firebase-admin": "^11.2.1",
+    "firebase-admin": "^11.3.0",
     "heroicons": "2.0.13",
-    "minisearch": "^5.0.0",
+    "minisearch": "^5.1.0",
     "mjml-react": "^2.0.8",
-    "next": "^13.0.3",
+    "next": "^13.0.4",
     "next-i18next": "^12.1.0",
     "nodemailer": "^6.8.0",
     "nookies": "^2.5.2",
@@ -62,33 +62,33 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-epic-spinners": "^0.5.0",
-    "react-hook-form": "^7.39.3",
+    "react-hook-form": "^7.39.4",
     "react-hot-toast": "^2.4.0",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
-    "stripe": "^10.17.0",
-    "tailwindcss": "^3.2.3",
+    "stripe": "^11.1.0",
+    "tailwindcss": "^3.2.4",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.15.5",
-    "@next/bundle-analyzer": "^13.0.3",
-    "@types/jest": "^29.2.2",
+    "@next/bundle-analyzer": "^13.0.4",
+    "@types/jest": "^29.2.3",
     "@types/mjml-react": "^2.0.6",
     "@types/node": "^18.11.9",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^11.0.1",
+    "cypress": "^11.1.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.27.0",
-    "eslint-config-next": "13.0.3",
+    "eslint": "^8.28.0",
+    "eslint-config-next": "13.0.4",
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
-    "next-sitemap": "^3.1.30",
+    "next-sitemap": "^3.1.32",
     "pino-pretty": "^9.1.1",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
@@ -97,8 +97,7 @@
     "rehype-highlight": "^6.0.0",
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.1.0",
-    "stripe-cli": "^0.1.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "optionalDependencies": {
     "recharts": "^2.1.16"
