--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.6.9",
+  "version": "0.7.0",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -62,8 +62,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-epic-spinners": "^0.5.0",
-    "react-hook-form": "^7.39.6",
+    "react-hook-form": "^7.39.7",
     "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.0.0",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
     "stripe": "^11.1.0",
