--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.7.5",
+  "version": "0.7.6",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -40,9 +40,10 @@
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
     "@mdx-js/mdx": "^2.1.5",
-    "@sentry/node": "^7.24.2",
-    "@sentry/react": "^7.24.2",
-    "@sentry/tracing": "^7.24.2",
+    "@next/font": "^13.0.6",
+    "@sentry/node": "^7.25.0",
+    "@sentry/react": "^7.25.0",
+    "@sentry/tracing": "^7.25.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
@@ -54,7 +55,7 @@
     "minisearch": "^6.0.0",
     "mjml-react": "^2.0.8",
     "next": "^13.0.6",
-    "next-i18next": "^13.0.0",
+    "next-i18next": "^13.0.1",
     "nodemailer": "^6.8.0",
     "nookies": "^2.5.2",
     "pino": "^8.7.0",
@@ -69,21 +70,21 @@
     "reactfire": "^4.2.2",
     "stripe": "^11.3.0",
     "tailwindcss": "^3.2.4",
-    "zod": "^3.19.1"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.15.7",
     "@next/bundle-analyzer": "^13.0.6",
     "@types/jest": "^29.2.4",
     "@types/mjml-react": "^2.0.6",
-    "@types/node": "^18.11.11",
+    "@types/node": "^18.11.14",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
-    "cypress": "^12.0.2",
+    "cypress": "^12.1.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-next": "13.0.6",
@@ -91,7 +92,7 @@
     "mjml": "^4.13.0",
     "next-sitemap": "^3.1.32",
     "pino-pretty": "^9.1.1",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "rehype-autolink-headings": "^6.1.1",
