--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.7.9",
+  "version": "0.8.0",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -24,7 +24,6 @@
     "typecheck": "tsc",
     "lint": "next lint",
     "format": "prettier --write src/**/*.{ts,tsx}",
-    "export": "next export",
     "healthcheck": "npm run lint && npm run typecheck",
     "firebase:emulators:start": "firebase emulators:start --project demo-makerkit --import ./firebase-seed",
     "firebase:emulators:export": "firebase emulators:export --project demo-makerkit ./firebase-seed",
@@ -63,19 +62,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-epic-spinners": "^0.5.0",
-    "react-hook-form": "^7.41.1",
+    "react-hook-form": "^7.41.3",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
     "stripe": "^11.5.0",
+    "swr": "^2.0.0",
     "tailwindcss": "^3.2.4",
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.16.0",
+    "@cypress/webpack-preprocessor": "^5.16.1",
     "@next/bundle-analyzer": "^13.1.1",
-    "@types/jest": "^29.2.4",
+    "@types/jest": "^29.2.5",
     "@types/mjml-react": "^2.0.6",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
@@ -86,7 +86,7 @@
     "autoprefixer": "^10.4.13",
     "cypress": "^12.2.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.30.0",
+    "eslint": "^8.31.0",
     "eslint-config-next": "13.1.1",
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
