--- a/.env.test
+++ b/.env.test
@@ -13,15 +13,15 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:981813564016:web:f13148231721fcd0ee5ab5
 # Change this with your project's API KEY
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAAqU_euGAMtJoXp0sECblAIndifCp0pmE
 
-NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=localhost
+NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=127.0.0.1
 NEXT_PUBLIC_FIRESTORE_EMULATOR_PORT=8080
 NEXT_PUBLIC_FIREBASE_AUTH_EMULATOR_PORT=9099
 NEXT_PUBLIC_FIREBASE_STORAGE_EMULATOR_PORT=9199
 
-FIRESTORE_EMULATOR_HOST=localhost:8080
-FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
-FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
-FIREBASE_PUBSUB_EMULATOR_HOST=localhost:8085
+FIRESTORE_EMULATOR_HOST=127.0.0.1:8080
+FIREBASE_AUTH_EMULATOR_HOST=127.0.0.1:9099
+FIREBASE_STORAGE_EMULATOR_HOST=127.0.0.1:9199
+FIREBASE_PUBSUB_EMULATOR_HOST=127.0.0.1:8085
 
 USER_EMAIL=test@makerkit.dev
 USER_PASSWORD=testingpassword
