--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -55,13 +55,13 @@
     "mjml-react": "^2.0.8",
     "next": "^13.1.2",
     "next-i18next": "^13.0.3",
-    "nodemailer": "^6.8.0",
+    "nodemailer": "^6.9.0",
     "nookies": "^2.5.2",
     "pino": "^8.8.0",
     "raw-body": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.5",
+    "react-hook-form": "^7.42.1",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.4",
     "react-top-loading-bar": "^2.3.1",
@@ -85,14 +85,15 @@
     "autoprefixer": "^10.4.13",
     "cypress": "^12.3.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.31.0",
+    "eslint": "^8.32.0",
     "eslint-config-next": "13.1.2",
     "gray-matter": "4.0.3",
+    "firebase-tools": "^11.20.0",
     "mjml": "^4.13.0",
     "next-sitemap": "^3.1.45",
     "pino-pretty": "^9.1.1",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.2",
+    "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^6.0.0",
