--- a/.env.local.template
+++ b/.env.local.template
@@ -1,4 +1,4 @@
 # Add here variables local to your machine, do not check in
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-SECRET_KEY=
+STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
