--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -30,7 +30,7 @@
     "cypress": "NODE_ENV=test cypress open",
     "cypress:headless": "NODE_ENV=test cypress run",
     "test": "firebase emulators:exec --project demo-makerkit --import ./firebase-seed \"sh ./scripts/test.sh\"",
-    "stripe:listen": "docker run --rm -it --name=stripe -v ~/.config/stripe:/root/.config/stripe stripe/stripe-cli:latest listen --forward-to localhost:3000/api/stripe/webhook",
+    "stripe:listen": "docker run --rm -it --name=stripe -v ~/.config/stripe:/root/.config/stripe stripe/stripe-cli:latest listen --forward-to http://host.docker.internal:3000/api/stripe/webhook",
     "stripe:mock-server": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest",
     "blog-docs-indexer": "npx tsx ./search-indexer",
     "killports": "sh scripts/kill-ports.sh"
@@ -40,9 +40,9 @@
     "@heroicons/react": "^2.0.13",
     "@mdx-js/mdx": "^2.2.1",
     "@next/font": "^13.1.2",
-    "@sentry/node": "^7.30.0",
-    "@sentry/react": "^7.30.0",
-    "@sentry/tracing": "^7.30.0",
+    "@sentry/node": "^7.31.0",
+    "@sentry/react": "^7.31.0",
+    "@sentry/tracing": "^7.31.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
@@ -80,8 +80,8 @@
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.3.0",
     "dotenv": "^16.0.3",
