--- a/.env.development
+++ b/.env.development
@@ -15,6 +15,7 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:981813564016:web:f13148231721fcd0ee5ab5
 # Change this with your project's API KEY
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAAqU_euGAMtJoXp0sECblAIndifCp0pmE
 
+NEXT_PUBLIC_APPCHECK_DEBUG_TOKEN=
 
 FIRESTORE_EMULATOR_HOST=127.0.0.1:8080
 FIREBASE_AUTH_EMULATOR_HOST=127.0.0.1:9099
