--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.8.4",
+  "version": "0.9.0",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -36,16 +36,22 @@
     "killports": "sh scripts/kill-ports.sh"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
+    "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@mdx-js/mdx": "^2.2.1",
-    "@next/font": "^13.1.5",
-    "@sentry/node": "^7.33.0",
-    "@sentry/react": "^7.33.0",
-    "@sentry/tracing": "^7.33.0",
-    "@tippyjs/react": "^4.2.6",
+    "@next/font": "^13.1.6",
+    "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-popover": "1.0.3",
+    "@radix-ui/react-select": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.0.3",
+    "@sentry/node": "^7.34.0",
+    "@sentry/react": "^7.34.0",
+    "@sentry/tracing": "^7.34.0",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
+    "cva": "npm:class-variance-authority@^0.4.0",
     "date-fns": "2.29.3",
     "feed": "^4.2.2",
     "firebase": "^9.16.0",
@@ -53,9 +59,9 @@
     "heroicons": "2.0.14",
     "minisearch": "^6.0.0",
     "mjml-react": "^2.0.8",
-    "next": "^13.1.5",
+    "next": "^13.1.6",
     "next-i18next": "^13.0.3",
-    "nodemailer": "^6.9.0",
+    "nodemailer": "^6.9.1",
     "nookies": "^2.5.2",
     "pino": "^8.8.0",
     "raw-body": "^2.5.1",
@@ -66,14 +72,14 @@
     "react-i18next": "^12.1.4",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
-    "stripe": "^11.7.0",
-    "swr": "^2.0.1",
+    "stripe": "^11.8.0",
+    "swr": "^2.0.3",
     "tailwindcss": "^3.2.4",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.16.1",
-    "@next/bundle-analyzer": "^13.1.5",
+    "@next/bundle-analyzer": "^13.1.6",
     "@types/jest": "^29.4.0",
     "@types/mjml-react": "^2.0.6",
     "@types/node": "^18.11.18",
@@ -83,14 +89,14 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^12.4.0",
+    "cypress": "^12.4.1",
     "dotenv": "^16.0.3",
-    "eslint": "^8.32.0",
-    "eslint-config-next": "13.1.5",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "13.1.6",
     "gray-matter": "4.0.3",
     "firebase-tools": "^11.20.0",
     "mjml": "^4.13.0",
-    "next-sitemap": "^3.1.45",
+    "next-sitemap": "^3.1.48",
     "pino-pretty": "^9.1.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
