--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.9.3",
+  "version": "0.9.5",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -36,7 +36,7 @@
     "killports": "sh scripts/kill-ports.sh"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.8",
+    "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@mdx-js/mdx": "^2.2.1",
     "@next/font": "^13.1.6",
@@ -54,10 +54,10 @@
     "cva": "npm:class-variance-authority@^0.4.0",
     "date-fns": "2.29.3",
     "feed": "^4.2.2",
-    "firebase": "9.16.0",
+    "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "heroicons": "2.0.14",
-    "minisearch": "^6.0.0",
+    "minisearch": "^6.0.1",
     "mjml-react": "^2.0.8",
     "next": "^13.1.6",
     "next-i18next": "^13.1.4",
@@ -72,7 +72,7 @@
     "react-i18next": "^12.1.5",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
-    "stripe": "^11.9.0",
+    "stripe": "^11.9.1",
     "swr": "^2.0.3",
     "tailwindcss": "^3.2.4",
     "zod": "^3.20.2"
