--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.10.1",
+  "version": "0.10.2",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -46,9 +46,9 @@
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.0.3",
-    "@sentry/node": "^7.37.0",
-    "@sentry/react": "^7.37.0",
-    "@sentry/tracing": "^7.37.0",
+    "@sentry/node": "^7.37.1",
+    "@sentry/react": "^7.37.1",
+    "@sentry/tracing": "^7.37.1",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
     "cva": "npm:class-variance-authority@^0.4.0",
@@ -57,6 +57,7 @@
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "heroicons": "2.0.15",
+    "i18next": "^22.4.9",
     "minisearch": "^6.0.1",
     "mjml-react": "^2.0.8",
     "next": "^13.1.6",
@@ -84,20 +85,20 @@
     "@types/mjml-react": "^2.0.6",
     "@types/node": "^18.13.0",
     "@types/nodemailer": "^6.4.7",
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.5.1",
     "dotenv": "^16.0.3",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
-    "gray-matter": "4.0.3",
     "firebase-tools": "^11.22.0",
+    "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
     "next-sitemap": "^3.1.52",
-    "pino-pretty": "^9.1.1",
+    "pino-pretty": "^9.2.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
