--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.10.3",
+  "version": "0.10.4",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.11",
-    "@heroicons/react": "^2.0.15",
+    "@heroicons/react": "^2.0.16",
     "@mdx-js/mdx": "^2.3.0",
     "@next/font": "^13.1.6",
     "@radix-ui/react-avatar": "^1.0.1",
@@ -46,9 +46,18 @@
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.0.3",
-    "@sentry/node": "^7.37.2",
-    "@sentry/react": "^7.37.2",
-    "@sentry/tracing": "^7.37.2",
+    "@react-email/body": "^0.0.1",
+    "@react-email/button": "^0.0.6",
+    "@react-email/column": "^0.0.6",
+    "@react-email/head": "^0.0.4",
+    "@react-email/html": "^0.0.4",
+    "@react-email/preview": "^0.0.5",
+    "@react-email/render": "^0.0.6",
+    "@react-email/section": "^0.0.8",
+    "@react-email/text": "^0.0.4",
+    "@sentry/node": "^7.38.0",
+    "@sentry/react": "^7.38.0",
+    "@sentry/tracing": "^7.38.0",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
     "cva": "npm:class-variance-authority@^0.4.0",
@@ -56,19 +65,18 @@
     "feed": "^4.2.2",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
-    "heroicons": "2.0.15",
-    "i18next": "^22.4.9",
+    "heroicons": "2.0.16",
+    "i18next": "^22.4.10",
     "minisearch": "^6.0.1",
-    "mjml-react": "^2.0.8",
     "next": "^13.1.6",
     "next-i18next": "^13.1.5",
     "nodemailer": "^6.9.1",
     "nookies": "^2.5.2",
     "pino": "^8.10.0",
-    "raw-body": "^2.5.1",
+    "raw-body": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.1",
+    "react-hook-form": "^7.43.2",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.5",
     "react-top-loading-bar": "^2.3.1",
@@ -82,23 +90,21 @@
     "@cypress/webpack-preprocessor": "^5.17.0",
     "@next/bundle-analyzer": "^13.1.6",
     "@types/jest": "^29.4.0",
-    "@types/mjml-react": "^2.0.6",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.14.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^12.5.1",
+    "cypress": "^12.6.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase-tools": "^11.23.1",
     "gray-matter": "4.0.3",
-    "mjml": "^4.13.0",
     "next-sitemap": "^3.1.52",
-    "pino-pretty": "^9.2.0",
+    "pino-pretty": "^9.3.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
