--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-popover": "1.0.5",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-toggle-group": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@react-email/body": "^0.0.1",
     "@react-email/button": "^0.0.6",
@@ -57,6 +59,7 @@
     "@sentry/node": "^7.41.0",
     "@sentry/react": "^7.41.0",
     "@sentry/tracing": "^7.41.0",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
     "cva": "npm:class-variance-authority@^0.4.0",
@@ -74,12 +77,14 @@
     "pino": "^8.11.0",
     "raw-body": "^2.5.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
+    "recoil": "^0.7.7",
     "stripe": "^11.13.0",
     "swr": "^2.1.0",
     "tailwindcss": "^3.2.7",
