--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@sentry/tracing": "^7.41.0",
     "@types/react-beautiful-dnd": "^13.1.3",
     "classnames": "2.3.2",
+    "clipboard-polyfill": "^4.0.0",
     "csrf": "^3.1.0",
     "cva": "npm:class-variance-authority@^0.4.0",
     "date-fns": "2.29.3",
